--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -5,17 +5,16 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <Label layoutX="187.0" layoutY="97.0" text="Generador de Examenes">
          <font>
             <Font name="Consolas" size="30.0" />
          </font>
       </Label>
-      <Button layoutX="187.0" layoutY="228.0" mnemonicParsing="false" text="Generar Examen" />
-      <Button layoutX="450.0" layoutY="314.0" mnemonicParsing="false" text="Editar Pregunta" />
-      <Button layoutX="460.0" layoutY="228.0" mnemonicParsing="false" text="Ver Examen" />
-      <Button layoutX="183.0" layoutY="306.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="111.0" text="Agregar Pregunta / Materia / Tema" wrapText="true" />
+      <Button fx:id="generateExamButton" layoutX="187.0" layoutY="228.0" mnemonicParsing="false" onAction="#loadGenerateExam" text="Generar Examen" />
+      <Button fx:id="editQuestionButton" layoutX="450.0" layoutY="314.0" mnemonicParsing="false" onAction="#loadEditQuestion" text="Editar Pregunta" />
+      <Button fx:id="viewExamButton" layoutX="460.0" layoutY="228.0" mnemonicParsing="false" onAction="#loadViewExam" text="Ver Examen" />
+      <Button fx:id="addQuestionButton" layoutX="183.0" layoutY="306.0" mnemonicParsing="false" onAction="#loadAddQuestion" prefHeight="42.0" prefWidth="111.0" text="Agregar Pregunta / Materia / Tema" wrapText="true" />
    </children>
 </AnchorPane>
