--- a/src/application/EditarPreguntas.fxml
+++ b/src/application/EditarPreguntas.fxml
@@ -6,8 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditarPreguntasController">
    <children>
       <Label layoutX="236.0" layoutY="14.0" text="Editar Pregunta">
          <font>
@@ -40,5 +39,6 @@
             <Image url="@../../Pictures/search.png" />
          </image>
       </ImageView>
+      <Button fx:id="returnButton" layoutX="533.0" layoutY="429.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
    </children>
 </AnchorPane>
