--- a/src/application/agregarPreguntas.fxml
+++ b/src/application/agregarPreguntas.fxml
@@ -1,85 +1,190 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AgregarPreguntasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AgregarPreguntasController">
    <children>
       <Label layoutX="220.0" layoutY="21.0" text="Agregar Preguntas">
          <font>
             <Font name="Consolas" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="37.0" layoutY="83.0" text="Materia">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="44.0" layoutY="128.0" text="Tema">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <MenuButton layoutX="144.0" layoutY="81.0" mnemonicParsing="false" text="--------------">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </MenuButton>
-      <MenuButton layoutX="143.0" layoutY="126.0" mnemonicParsing="false" text="--------------">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </MenuButton>
-      <Label layoutX="30.0" layoutY="173.0" text="Dificultad">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <MenuButton layoutX="143.0" layoutY="172.0" mnemonicParsing="false" text="--------------">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-         </items>
-      </MenuButton>
-      <Button layoutX="250.0" layoutY="83.0" mnemonicParsing="false" text="+" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font name="Cambria Math" size="12.0" />
-         </font>
-      </Button>
-      <Button layoutX="250.0" layoutY="128.0" mnemonicParsing="false" text="+" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font name="Cambria Math" size="12.0" />
-         </font>
-      </Button>
-      <Button layoutX="250.0" layoutY="173.0" mnemonicParsing="false" text="+" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font name="Cambria Math" size="12.0" />
-         </font>
-      </Button>
-      <TextField layoutX="144.0" layoutY="213.0" prefHeight="108.0" prefWidth="374.0" />
-      <Label layoutX="30.0" layoutY="215.0" text="Pregunta">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <TextField layoutX="144.0" layoutY="340.0" prefHeight="25.0" prefWidth="374.0" />
-      <Label layoutX="33.0" layoutY="340.0" text="Opcion 1">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Button layoutX="33.0" layoutY="421.0" mnemonicParsing="false" text="+ Agregar opción" />
-      <Label layoutX="33.0" layoutY="380.0" text="Opcion 2">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <TextField layoutX="144.0" layoutY="378.0" prefHeight="25.0" prefWidth="374.0" />
+      <Button layoutX="33.0" layoutY="434.0" mnemonicParsing="false" text="+ Agregar opción" />
       <Button fx:id="returnButton" layoutX="553.0" layoutY="434.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
       <Button layoutX="632.0" layoutY="434.0" mnemonicParsing="false" text="Guardar" />
+      <Label layoutX="25.0" layoutY="232.0" text="Indique las opciones y seleccione la correcta" />
+      <HBox layoutX="25.0" layoutY="78.0" prefHeight="25.0" spacing="25.0" style="-fx-background-color: transparent;">
+         <children>
+            <HBox prefHeight="25.0" prefWidth="208.0" style="-fx-background-color: transparent;">
+               <children>
+                  <Label prefHeight="25.0" text="Materia">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <MenuButton mnemonicParsing="false" text="--------------">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                      <MenuItem mnemonicParsing="false" text="Action 2" />
+                    </items>
+                     <HBox.margin>
+                        <Insets left="20.0" right="8.0" />
+                     </HBox.margin>
+                  </MenuButton>
+                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="Cambria Math" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox prefHeight="25.0" prefWidth="189.0">
+               <children>
+                  <Label prefHeight="25.0" text="Tema">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <MenuButton mnemonicParsing="false" text="--------------">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Action 1" />
+                        <MenuItem mnemonicParsing="false" text="Action 2" />
+                     </items>
+                     <HBox.margin>
+                        <Insets left="20.0" right="8.0" />
+                     </HBox.margin>
+                  </MenuButton>
+                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="Cambria Math" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox prefHeight="25.0" prefWidth="218.0">
+               <children>
+                  <Label prefHeight="25.0" text="Dificultad">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <MenuButton mnemonicParsing="false" text="--------------">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Action 1" />
+                        <MenuItem mnemonicParsing="false" text="Action 2" />
+                     </items>
+                     <HBox.margin>
+                        <Insets left="20.0" right="8.0" />
+                     </HBox.margin>
+                  </MenuButton>
+                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="Cambria Math" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </HBox>
+      <ScrollPane layoutX="25.0" layoutY="263.0" pickOnBounds="false" prefHeight="139.0" prefWidth="679.0" style="-fx-background-color: transparent;" styleClass="edge-to-edge">
+        <content>
+          <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" pickOnBounds="false" style="-fx-background-color: transparent;">
+               <children>
+                  <VBox spacing="13.0" style="-fx-background-color: transparent;">
+                     <children>
+                        <HBox spacing="13.0">
+                           <children>
+                              <Label text="Opcion 1">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                              <TextField prefHeight="25.0" prefWidth="553.0" />
+                              <RadioButton mnemonicParsing="false">
+                                 <HBox.margin>
+                                    <Insets top="4.0" />
+                                 </HBox.margin>
+                              </RadioButton>
+                           </children>
+                        </HBox>
+                        <HBox spacing="13.0">
+                           <children>
+                              <Label text="Opcion 2">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                              <TextField prefHeight="25.0" prefWidth="553.0" />
+                              <RadioButton mnemonicParsing="false">
+                                 <HBox.margin>
+                                    <Insets top="4.0" />
+                                 </HBox.margin>
+                              </RadioButton>
+                           </children>
+                        </HBox>
+                        <HBox spacing="13.0">
+                           <children>
+                              <Label text="Opcion 3">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                              <TextField prefHeight="25.0" prefWidth="553.0" />
+                              <RadioButton mnemonicParsing="false">
+                                 <HBox.margin>
+                                    <Insets top="4.0" />
+                                 </HBox.margin>
+                              </RadioButton>
+                           </children>
+                        </HBox>
+                        <HBox spacing="13.0">
+                           <children>
+                              <Label text="Opcion 4">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                              <TextField prefHeight="25.0" prefWidth="553.0" />
+                              <RadioButton mnemonicParsing="false">
+                                 <HBox.margin>
+                                    <Insets top="4.0" />
+                                 </HBox.margin>
+                              </RadioButton>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </AnchorPane>
+        </content>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </ScrollPane>
+      <HBox layoutX="25.0" layoutY="123.0" prefHeight="100.0" spacing="13.0">
+         <children>
+            <Label text="Pregunta">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <TextArea prefHeight="58.0" prefWidth="553.0" wrapText="true" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
