--- a/src/application/agregarPreguntas.fxml
+++ b/src/application/agregarPreguntas.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -14,66 +15,57 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AgregarPreguntasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AgregarPreguntasController">
    <children>
       <Label layoutX="220.0" layoutY="21.0" text="Agregar Preguntas">
          <font>
             <Font name="Consolas" size="30.0" />
          </font>
       </Label>
-      <Button layoutX="33.0" layoutY="434.0" mnemonicParsing="false" text="+ Agregar opción" />
       <Button fx:id="returnButton" layoutX="553.0" layoutY="434.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
       <Button layoutX="632.0" layoutY="434.0" mnemonicParsing="false" text="Guardar" />
       <Label layoutX="25.0" layoutY="232.0" text="Indique las opciones y seleccione la correcta" />
       <HBox layoutX="25.0" layoutY="78.0" prefHeight="25.0" spacing="25.0" style="-fx-background-color: transparent;">
          <children>
-            <HBox prefHeight="25.0" prefWidth="208.0" style="-fx-background-color: transparent;">
+            <HBox prefHeight="25.0" style="-fx-background-color: transparent;">
                <children>
-                  <Label prefHeight="25.0" text="Materia">
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Materia" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <MenuButton mnemonicParsing="false" text="--------------">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
+                  <ComboBox fx:id="comboMaterias" onKeyPressed="#addMateria" promptText="--------------">
                      <HBox.margin>
                         <Insets left="20.0" right="8.0" />
                      </HBox.margin>
-                  </MenuButton>
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
+                  </ComboBox>
+                  <Button mnemonicParsing="false" onAction="#editMaterias" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Cambria Math" size="12.0" />
                      </font>
                   </Button>
                </children>
             </HBox>
-            <HBox prefHeight="25.0" prefWidth="189.0">
+            <HBox prefHeight="25.0">
                <children>
-                  <Label prefHeight="25.0" text="Tema">
+                  <Label text="Tema">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <MenuButton mnemonicParsing="false" text="--------------">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
-                     </items>
+                  <ComboBox fx:id="comboTemas" onKeyPressed="#addTema" promptText="--------------">
                      <HBox.margin>
                         <Insets left="20.0" right="8.0" />
                      </HBox.margin>
-                  </MenuButton>
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
+                  </ComboBox>
+                  <Button mnemonicParsing="false" onAction="#editTemas" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Cambria Math" size="12.0" />
                      </font>
                   </Button>
                </children>
             </HBox>
-            <HBox prefHeight="25.0" prefWidth="218.0">
+            <HBox>
                <children>
                   <Label prefHeight="25.0" text="Dificultad">
                      <font>
@@ -82,27 +74,23 @@
                   </Label>
                   <MenuButton mnemonicParsing="false" text="--------------">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
+                        <MenuItem mnemonicParsing="false" text="Facil" />
+                        <MenuItem mnemonicParsing="false" text="Medio" />
+                        <MenuItem mnemonicParsing="false" text="Dificil" />
                      </items>
                      <HBox.margin>
                         <Insets left="20.0" right="8.0" />
                      </HBox.margin>
                   </MenuButton>
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="25.0" text="+" textAlignment="CENTER" wrapText="true">
-                     <font>
-                        <Font name="Cambria Math" size="12.0" />
-                     </font>
-                  </Button>
                </children>
             </HBox>
          </children>
       </HBox>
-      <ScrollPane layoutX="25.0" layoutY="263.0" pickOnBounds="false" prefHeight="139.0" prefWidth="679.0" style="-fx-background-color: transparent;" styleClass="edge-to-edge">
+      <ScrollPane layoutX="25.0" layoutY="263.0" pickOnBounds="false" style="-fx-background-color: transparent;" styleClass="edge-to-edge">
         <content>
           <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" pickOnBounds="false" style="-fx-background-color: transparent;">
                <children>
-                  <VBox spacing="13.0" style="-fx-background-color: transparent;">
+                  <VBox fx:id="opciones" spacing="13.0" style="-fx-background-color: transparent;">
                      <children>
                         <HBox spacing="13.0">
                            <children>
@@ -176,15 +164,18 @@
             <Insets />
          </opaqueInsets>
       </ScrollPane>
-      <HBox layoutX="25.0" layoutY="123.0" prefHeight="100.0" spacing="13.0">
+      <HBox layoutX="25.0" layoutY="123.0" spacing="13.0">
          <children>
             <Label text="Pregunta">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <TextArea prefHeight="58.0" prefWidth="553.0" wrapText="true" />
+            <TextArea prefHeight="100.0" prefWidth="553.0" wrapText="true" />
          </children>
       </HBox>
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </AnchorPane>
