--- a/src/application/agregarPreguntas.fxml
+++ b/src/application/agregarPreguntas.fxml
@@ -4,8 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
@@ -72,16 +70,11 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <MenuButton mnemonicParsing="false" text="--------------">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Facil" />
-                        <MenuItem mnemonicParsing="false" text="Medio" />
-                        <MenuItem mnemonicParsing="false" text="Dificil" />
-                     </items>
+                  <ComboBox fx:id="comboDificultad" onKeyPressed="#addTema" promptText="--------------">
                      <HBox.margin>
-                        <Insets left="20.0" right="8.0" />
+                        <Insets left="8.0" right="20.0" />
                      </HBox.margin>
-                  </MenuButton>
+                  </ComboBox>
                </children>
             </HBox>
          </children>
@@ -100,7 +93,7 @@
                                  </font>
                               </Label>
                               <TextField prefHeight="25.0" prefWidth="553.0" />
-                              <RadioButton mnemonicParsing="false">
+                              <RadioButton fx:id="opcion1" mnemonicParsing="false">
                                  <HBox.margin>
                                     <Insets top="4.0" />
                                  </HBox.margin>
@@ -115,7 +108,7 @@
                                  </font>
                               </Label>
                               <TextField prefHeight="25.0" prefWidth="553.0" />
-                              <RadioButton mnemonicParsing="false">
+                              <RadioButton fx:id="opcion2" mnemonicParsing="false">
                                  <HBox.margin>
                                     <Insets top="4.0" />
                                  </HBox.margin>
@@ -130,7 +123,7 @@
                                  </font>
                               </Label>
                               <TextField prefHeight="25.0" prefWidth="553.0" />
-                              <RadioButton mnemonicParsing="false">
+                              <RadioButton fx:id="opcion3" mnemonicParsing="false">
                                  <HBox.margin>
                                     <Insets top="4.0" />
                                  </HBox.margin>
@@ -145,7 +138,7 @@
                                  </font>
                               </Label>
                               <TextField prefHeight="25.0" prefWidth="553.0" />
-                              <RadioButton mnemonicParsing="false">
+                              <RadioButton fx:id="opcion4" mnemonicParsing="false">
                                  <HBox.margin>
                                     <Insets top="4.0" />
                                  </HBox.margin>
