--- a/src/application/agregarPreguntas.fxml
+++ b/src/application/agregarPreguntas.fxml
@@ -32,7 +32,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="comboMaterias" onKeyPressed="#addMateria" promptText="--------------">
+                  <ComboBox fx:id="comboMaterias" onAction="#loadTemas" onKeyPressed="#addMateria" promptText="--------------">
                      <HBox.margin>
                         <Insets left="20.0" right="8.0" />
                      </HBox.margin>
