--- a/src/application/generarExamen.fxml
+++ b/src/application/generarExamen.fxml
@@ -1,46 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
     <children>
         <Button layoutX="591.0" layoutY="414.0" onAction="#handleButtonAction" text="Generar" />
         <Label fx:id="label" layoutX="24.0" layoutY="33.0" minHeight="16" minWidth="69" text="Nombre de Examen" />
       <TextField layoutX="156.0" layoutY="28.0" />
-      <Button layoutX="377.0" layoutY="28.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="282.0" text="Agregar Pregunta / Materia / Tema" />
-      <MenuButton fx:id="materia" layoutX="46.0" layoutY="100.0" mnemonicParsing="false" onAction="#drop" prefHeight="27.0" prefWidth="103.0">
-        <items>
-          <MenuItem fx:id="item1" mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </MenuButton>
+      <Button layoutX="410.0" layoutY="28.0" mnemonicParsing="false" onAction="#abrirAgregarPregunta" prefHeight="27.0" text="Agregar Pregunta / Materia / Tema" />
       <Label fx:id="label1" layoutX="73.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="50.0" text="Materia" />
       <Label fx:id="label11" layoutX="222.0" layoutY="83.0" minHeight="16" minWidth="36.0" prefHeight="17.0" prefWidth="36.0" text="Tema" />
-      <MenuButton layoutX="188.0" layoutY="100.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="103.0">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-         </items>
-      </MenuButton>
-      <MenuButton layoutX="326.0" layoutY="100.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="103.0">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-         </items>
-      </MenuButton>
       <Label fx:id="label111" layoutX="347.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Dificultad" />
       <TextField layoutX="460.0" layoutY="100.0" prefHeight="27.0" prefWidth="103.0" />
       <Label fx:id="label1111" layoutX="482.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Cantidad" />
-      <Button layoutX="55.0" layoutY="371.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="27.0" text="+" />
-      <Button layoutX="595.0" layoutY="99.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="60.0" text="Borrar" />
+      <Button layoutX="46.0" layoutY="413.0" mnemonicParsing="false" text="Borrar" />
+      <Button layoutX="595.0" layoutY="99.0" mnemonicParsing="false" text="Agregar" />
       <Button fx:id="returnButton" layoutX="511.0" layoutY="414.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
+      <ListView layoutX="50.0" layoutY="165.0" prefHeight="238.0" prefWidth="620.0" />
+      <ComboBox layoutX="47.0" layoutY="101.0" prefWidth="103.0" />
+      <ComboBox layoutX="189.0" layoutY="101.0" prefWidth="103.0" />
+      <ComboBox layoutX="326.0" layoutY="101.0" prefWidth="103.0" />
+      <Label layoutX="314.0" layoutY="144.0" text="Preguntas">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
