--- a/src/application/generarExamen.fxml
+++ b/src/application/generarExamen.fxml
@@ -3,33 +3,41 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GenerarExamenController">
     <children>
-        <Button layoutX="591.0" layoutY="414.0" onAction="#handleButtonAction" text="Generar" />
-        <Label fx:id="label" layoutX="24.0" layoutY="33.0" minHeight="16" minWidth="69" text="Nombre de Examen" />
-      <TextField layoutX="156.0" layoutY="28.0" />
-      <Button layoutX="410.0" layoutY="28.0" mnemonicParsing="false" onAction="#abrirAgregarPregunta" prefHeight="27.0" text="Agregar Pregunta / Materia / Tema" />
+        <Button fx:id="generarButton" layoutX="591.0" layoutY="414.0" onAction="#generarExamen" text="Generar" />
+        <Label layoutX="24.0" layoutY="33.0" minHeight="16" minWidth="69" text="Nombre de Examen" />
+      <TextField fx:id="examen" layoutX="156.0" layoutY="28.0" />
+      <Button fx:id="agregarPreguntaButton" layoutX="410.0" layoutY="28.0" mnemonicParsing="false" onAction="#abrirAgregarPregunta" prefHeight="27.0" text="Agregar Pregunta / Materia / Tema" />
       <Label fx:id="label1" layoutX="73.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="50.0" text="Materia" />
       <Label fx:id="label11" layoutX="222.0" layoutY="83.0" minHeight="16" minWidth="36.0" prefHeight="17.0" prefWidth="36.0" text="Tema" />
       <Label fx:id="label111" layoutX="347.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Dificultad" />
-      <TextField layoutX="460.0" layoutY="100.0" prefHeight="27.0" prefWidth="103.0" />
+      <TextField fx:id="cantidad" alignment="CENTER" layoutX="460.0" layoutY="100.0" prefHeight="27.0" prefWidth="103.0" />
       <Label fx:id="label1111" layoutX="482.0" layoutY="83.0" minHeight="16" minWidth="50.0" prefHeight="17.0" prefWidth="60.0" text="Cantidad" />
-      <Button layoutX="46.0" layoutY="413.0" mnemonicParsing="false" text="Borrar" />
-      <Button layoutX="595.0" layoutY="99.0" mnemonicParsing="false" text="Agregar" />
+      <Button fx:id="borrarButton" layoutX="46.0" layoutY="413.0" mnemonicParsing="false" onAction="#deleteRow" text="Borrar" />
+      <Button fx:id="addButton" layoutX="595.0" layoutY="99.0" mnemonicParsing="false" onAction="#agregarPregunta" text="Agregar" />
       <Button fx:id="returnButton" layoutX="511.0" layoutY="414.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
-      <ListView layoutX="50.0" layoutY="165.0" prefHeight="238.0" prefWidth="620.0" />
-      <ComboBox layoutX="47.0" layoutY="101.0" prefWidth="103.0" />
-      <ComboBox layoutX="189.0" layoutY="101.0" prefWidth="103.0" />
-      <ComboBox layoutX="326.0" layoutY="101.0" prefWidth="103.0" />
+      <ComboBox fx:id="comboMaterias" layoutX="47.0" layoutY="101.0" onAction="#loadTemas" prefWidth="103.0" />
+      <ComboBox fx:id="comboTemas" layoutX="189.0" layoutY="101.0" onAction="#loadDificultades" prefWidth="103.0" />
+      <ComboBox fx:id="comboDificultad" layoutX="326.0" layoutY="101.0" prefWidth="103.0" />
       <Label layoutX="314.0" layoutY="144.0" text="Preguntas">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
+      <TableView fx:id="examVariableTable" layoutX="50.0" layoutY="165.0" prefHeight="234.0" prefWidth="620.0">
+        <columns>
+          <TableColumn fx:id="materiaCol" minWidth="155.0" prefWidth="-1.0" text="Materia" />
+          <TableColumn fx:id="temaCol" minWidth="155.0" prefWidth="-1.0" text="Tema" />
+            <TableColumn fx:id="dificultadCol" minWidth="155.0" prefWidth="175.0" text="Dificultad" />
+            <TableColumn fx:id="cantidadCol" minWidth="102.0" prefWidth="134.0" text="Cantidad" />
+        </columns>
+      </TableView>
     </children>
 </AnchorPane>
