--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <Label layoutX="187.0" layoutY="97.0" text="Generador de Examenes">
          <font>
@@ -14,7 +14,7 @@
       </Label>
       <Button fx:id="generateExamButton" layoutX="187.0" layoutY="228.0" mnemonicParsing="false" onAction="#loadGenerateExam" text="Generar Examen" />
       <Button fx:id="editQuestionButton" layoutX="450.0" layoutY="314.0" mnemonicParsing="false" onAction="#loadEditQuestion" text="Editar Pregunta" />
-      <Button fx:id="viewExamButton" layoutX="460.0" layoutY="228.0" mnemonicParsing="false" onAction="#loadViewExam" text="Ver Examen" />
+      <Button fx:id="viewExamButton" layoutX="450.0" layoutY="228.0" mnemonicParsing="false" onAction="#loadViewExam" text="Bajar Examenes" />
       <Button fx:id="addQuestionButton" layoutX="183.0" layoutY="306.0" mnemonicParsing="false" onAction="#loadAddQuestion" prefHeight="44.0" prefWidth="130.0" text="Agregar Pregunta / Materia / Tema" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
