--- a/src/application/generarExamen.fxml
+++ b/src/application/generarExamen.fxml
@@ -25,7 +25,7 @@
       <Button fx:id="returnButton" layoutX="511.0" layoutY="414.0" mnemonicParsing="false" onAction="#goBack" text="Regresar" />
       <ComboBox fx:id="comboMaterias" layoutX="47.0" layoutY="101.0" onAction="#loadTemas" prefWidth="103.0" />
       <ComboBox fx:id="comboTemas" layoutX="189.0" layoutY="101.0" onAction="#loadDificultades" prefWidth="103.0" />
-      <ComboBox fx:id="comboDificultad" layoutX="326.0" layoutY="101.0" prefWidth="103.0" />
+      <ComboBox fx:id="comboDificultades" layoutX="326.0" layoutY="101.0" prefWidth="103.0" />
       <Label layoutX="314.0" layoutY="144.0" text="Preguntas">
          <font>
             <Font size="15.0" />
