--- a/src/application/EditarPregunta.fxml
+++ b/src/application/EditarPregunta.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/10.0.151" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditarPreguntaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditarPreguntaController">
    <children>
       <Label layoutX="236.0" layoutY="14.0" text="Editar Pregunta">
          <font>
             <Font name="Consolas" size="30.0" />
          </font>
       </Label>
-      <TextField fx:id="name" layoutX="53.0" layoutY="81.0" prefHeight="25.0" prefWidth="475.0" text="Buscar preguntas" />
+      <TextField fx:id="name" layoutX="53.0" layoutY="81.0" prefHeight="25.0" prefWidth="475.0" promptText="Buscar preguntas" />
       <ComboBox fx:id="comboMaterias" layoutX="53.0" layoutY="133.0" onAction="#loadTemas" prefHeight="27.0" prefWidth="114.0" />
       <TableView fx:id="questionVariableTable" layoutX="53.0" layoutY="185.0" prefHeight="235.0" prefWidth="593.0">
         <columns>
